done with user code. Now for the note code
