# dao/main.go
@@ -1,6 +1,8 @@
 package dao
 
 import (
+	"net/url"
+
 	"github.com/wbrush/go-common/db"
 	"github.com/wbrush/mmhmm/models"
 )
@@ -16,10 +18,10 @@ type (
 
 	Users interface {
 		CreateUser(user *models.User) (isDuplicate bool, err error)
-		// GetTemplateById(shardID int64, id int64) (template *datamodels.Template, isFound bool, err error)
-		// ListTemplates(shardID int64, filters url.Values) (templates []datamodels.Template, total int, hasMore bool, err error)
-		// UpdateTemplate(shardID int64, template *datamodels.Template) (err error)
-		// DeleteTemplateById(shardID int64, id int64) (isFound bool, err error)
+		GetUserById(id int) (user *models.User, isFound bool, err error)
+		ListUsers(filters url.Values) (list []models.User, err error)
+		UpdateUserById(user *models.User) (err error)
+		DeleteUserById(id int) (isFound bool, err error)
 	}
 
 	DataAccessObject interface {
